[build-system]
requires=[
  "tensorflow-macos <2.14,>=2.13;sys_platform=='darwin' and platform_machine=='arm64'",
  "tensorflow-aarch64 <2.14,>=2.13;sys_platform=='linux' and platform_machine=='aarch64'",
  "tensorflow <2.14,>=2.13;platform_machine!='arm64' and platform_machine!='aarch64'",
  "setuptools"
]

[tool.black]
line-length = 80
target-version = ['py310']
